--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -1,5 +1,5 @@
 .title {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
@@ -8,11 +8,15 @@
   color: #000000;
   margin-bottom: 90px;
 }
-.wrapperText {
-  margin-top: 90px;
+
+.row {
+  align-items: center;
+}
+.wrapperSlider {
+  position: relative;
 }
 .desc {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 25px;
@@ -22,7 +26,7 @@
   margin-bottom: 28px;
 }
 .descInfo {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -32,7 +36,7 @@
   margin-bottom: 30px;
 }
 .link {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -48,9 +52,6 @@
   .title {
     text-align: center;
   }
-  .wrapperText {
-    margin-top: 60px;
-  }
 }
 @media (max-width: 770px) {
   .title {
@@ -59,6 +60,6 @@
   }
   .wrapperText {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 30px;
   }
 }
