--- a/src/components/CartCard/CartCard.module.scss
+++ b/src/components/CartCard/CartCard.module.scss
@@ -1,9 +1,9 @@
-.wrapper{
+.wrapper {
   padding: 0 5px;
 }
 .wrapperTitle {
   text-align: center;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -19,7 +19,7 @@
 .wrapperItemCard {
   text-align: center;
   margin-top: 10px;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
