--- a/src/components/Team/swiper.scss
+++ b/src/components/Team/swiper.scss
@@ -31,13 +31,13 @@
   color: lightblue;
 }
 .swiper-button-prev::after {
-  content: "←";
+  content: '←';
   font-size: 24px;
   color: #000;
 }
 
 .swiper-button-next::after {
-  content: "→";
+  content: '→';
   font-size: 24px;
   color: #000;
 }
