--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -3,7 +3,7 @@
 }
 .title {
   margin-bottom: 92px;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
@@ -13,11 +13,11 @@
 }
 
 // BenefitsCard
-.wrapperCard{
+.wrapperCard {
   margin: 0 10px;
 }
 .titleCard {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 25px;
@@ -27,7 +27,7 @@
   margin: 37px 0 24px 0;
 }
 .descCard {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -42,30 +42,30 @@
     text-align: center;
   }
   .descCard {
-		text-align: left;
+    text-align: left;
     width: 100%;
   }
 }
 @media (max-width: 770px) {
-	.benefits{
-		padding-top: 60px;
+  .benefits {
+    padding-top: 60px;
     padding-bottom: 60px;
-	}
-	.title{
-		margin-bottom: 45px;
-		font-size: 25px;
-	}
+  }
+  .title {
+    margin-bottom: 45px;
+    font-size: 25px;
+  }
   img {
     display: block;
     margin: 0 auto;
   }
   .titleCard {
     text-align: center;
-		font-size: 20px;
+    font-size: 20px;
   }
   .descCard {
-		margin-bottom: 25px;
-		text-align: center;
-		font-size: 14px;
+    margin-bottom: 25px;
+    text-align: center;
+    font-size: 14px;
   }
 }
