--- a/src/components/ShopSelect/ShopSelect.module.scss
+++ b/src/components/ShopSelect/ShopSelect.module.scss
@@ -1,7 +1,3 @@
-.inner{
-  display: flex;
-  justify-content: end;
-}
 .selectTabs {
   padding: 10px;
   border: none;
@@ -13,35 +9,19 @@
   max-width: 150px;
   width: 100%;
 }
-.innerBtn{
-  display: flex;
-  align-items: center;
-}
-.btnSort {
-  margin-left: 20px;
-  cursor: pointer;
-  border: 1px solid #6e9c9f;
-  background-color: transparent;
-  color: #6e9c9f;
-  max-width: 150px;
-  height: 40px;
-  transition: all 0.3s ease-in;
-  &.active,
-  &:hover {
-    background-color: #6e9c9f;
-    color: white;
-  }
-}
 
 @media (max-width: 1280px) {
-  .innerBtn{
-    display: none;
-  }
   .selectTabs {
     display: block;
     margin-bottom: 30px;
   }
-  .inner{
-    justify-content: space-around;
+  .inner {
+    display: flex;
+    column-gap: 20px;
+  }
+}
+@media (max-width: 1024px) {
+  .inner {
+    justify-content: center;
   }
 }
