--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -12,7 +12,7 @@
 }
 .item {
   color: var(--secondary-color);
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -25,7 +25,7 @@
 }
 .navBtn {
   border: none;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -67,14 +67,14 @@
       .burgerLine {
         background: transparent;
         &::before {
-          content: "";
+          content: '';
           transform: rotate(45deg);
           top: 0;
           transition: 0.5s;
         }
 
         &::after {
-          content: "";
+          content: '';
           transform: rotate(-45deg);
           top: 0;
           transition: 0.5s;
@@ -90,7 +90,7 @@
       transition: 0.5s;
 
       &::before {
-        content: "";
+        content: '';
         width: 25px;
         height: 2px;
         background: black;
@@ -101,7 +101,7 @@
       }
 
       &::after {
-        content: "";
+        content: '';
         width: 25px;
         height: 2px;
         background: black;
@@ -125,7 +125,7 @@
       padding: 20px;
       width: 100%;
       height: 100%;
-      z-index:2;
+      z-index: 2;
       background-color: var(--primary-color);
     }
   }
@@ -134,7 +134,7 @@
   }
 }
 @media (max-width: 640px) {
-  .header{
+  .header {
     padding-bottom: 5px;
   }
   .burger {
