fix: README.md -> change clone ref & build script

--- a/src/components/FilterButtons/FilterButtons.module.scss
+++ b/src/components/FilterButtons/FilterButtons.module.scss
@@ -23,7 +23,7 @@
 .innerBtn {
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 .btnSort {
   margin-left: 20px;
